# APC524-F2023-hw6

./: CMakeLists.txt
src/: _core.cpp
src/se_for_sci_hw6/: __init__.py
